--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         name="description">
   <meta content="width=device-width, initial-scale=1"
         name="viewport">
-  <script src="./jquery-3.1.1.min.js"></script>
+  <script async src="./jquery-3.1.1.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89357965-2"></script>
 <script>
