--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
         name="description">
   <meta content="width=device-width, initial-scale=1"
         name="viewport">
-  <script async src="./jquery-3.1.1.min.js"></script>
+<script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
+<script>
+window.jQuery || document.write('<script src="/jquery.min.js"><\/script>'))
+</script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89357965-2"></script>
 <script>
