--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         name="description">
   <meta content="width=device-width, initial-scale=1"
         name="viewport">
-<script src="https://cdn.staticfile.org/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script>
 window.jQuery || document.write('<script src="/jquery.min.js"><\/script>'))
 </script>
