--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         name="viewport">
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script>
-window.jQuery || document.write('<script src="/jquery.min.js"><\/script>'))
+window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
 </script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89357965-2"></script>
