ad google adsense

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
 
   gtag('config', 'UA-89357965-2');
 </script>
-
+<script data-ad-client="ca-pub-6453415353821476" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
   <link href="https://fonts.googleapis.com/css?family=Inconsolata"
         rel="stylesheet">
@@ -111,7 +111,7 @@ window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
 
             });
     }
-    $.getJSON("./breast.json", function (data) {
+    $.getJSON("/breast.json", function (data) {
         phrases = data;
         // filter out some old phrases start with 1xxxx
         //phrases = phrases.filter(x=>x[0].search(/^1(b|bm|u|m)/igm)==-1 ).filter(x=>x[0].search(/^[\d]{2}/igm)==-1 )
