--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@ window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-
   gtag('config', 'UA-89357965-2');
 </script>
-
   <link href="https://fonts.googleapis.com/css?family=Inconsolata"
         rel="stylesheet">
   <style type="text/css">
@@ -110,7 +108,7 @@ window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
 
             });
     }
-    $.getJSON("/breast.json", function (data) {
+    $.getJSON("./breast.json", function (data) {
         phrases = data;
         // filter out some old phrases start with 1xxxx
         //phrases = phrases.filter(x=>x[0].search(/^1(b|bm|u|m)/igm)==-1 ).filter(x=>x[0].search(/^[\d]{2}/igm)==-1 )
