--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script>
 window.jQuery || document.write('<script src="/jquery.min.js"><\/script>')
 </script>
+<script data-ad-client="ca-pub-6453415353821476" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89357965-2"></script>
 <script>
